# internal/app/controller/login/login.go
@@ -38,6 +38,12 @@ func (l *Login) respondWithToken(c *gin.Context, userID string) {
 }
 
 // In verifies username and password and generate a token to client.
+// @Tags Login
+// @Summary Login with username and password.
+// @Param user body schema.LoginParam true "login with username and password"
+// @Success 200 {object} schema.LoginTokenInfo
+// @Failure 400 {object} errors.impl "bad request parameters or invalid username/password"
+// @Router /api/v1/pub/login [post]
 func (l *Login) In(c *gin.Context) {
 	var cred schema.LoginParam
 	if err := c.ShouldBind(&cred); err != nil {
@@ -75,6 +81,11 @@ func (l *Login) In(c *gin.Context) {
 }
 
 // Out destroys the token for the login client.
+// @Tags Login
+// @Summary Logout with a token.
+// @Param Authorization header string false "Bearer token"
+// @Success 200 {object} errors.impl "ok"
+// @Router /api/v1/pub/login/exit [post]
 func (l *Login) Out(c *gin.Context) {
 	userID := ginhelper.GetUserID(c)
 	if userID != "" {
